feat(static): finish mobile-first ipad

--- a/static/index.html
+++ b/static/index.html
@@ -10,9 +10,9 @@
 <header>
   <nav>
     <ul>
-      <li class="navbut"><a href="#">Home</a></li>
-      <li class="navbut"><a href="#">About Us</a></li>
-      <li class="navbut"><a href="#">Contact Us</a></li>
+      <li class="nav-buttons"><a href="#">Home</a></li>
+      <li class="nav-buttons"><a href="#">About Us</a></li>
+      <li class="nav-buttons"><a href="#">Contact Us</a></li>
       <li class="login"><a href="#" class="cta">Log In</a></li>
     </ul>
   </nav>
